grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: observability
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: parca
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: observability
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/component: observability
        app.kubernetes.io/name: grafana
    spec:
      containers:
      - image: grafana/grafana:9.4.3
        name: grafana
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 1G
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
        - mountPath: /etc/grafana
          name: grafana-config
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
        - mountPath: /grafana-dashboard-definitions/0/parca
          name: grafana-dashboard-parca
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: grafana
      volumes:
      - name: grafana-storage
        emptyDir: {}
      - name: grafana-config
        secret:
          defaultMode: 420
          secretName: grafana-config
          items:
            - key: grafana.ini
              path: grafana.ini
      - name: grafana-datasources
        secret:
          defaultMode: 420
          secretName: grafana-datasources
      - name: grafana-dashboards
        configMap:
          defaultMode: 420
          name: grafana-dashboards
      - configMap:
          defaultMode: 420
          name: grafana-dashboard-parca
        name: grafana-dashboard-parca
