grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: observability
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: parca
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: observability
    app.kubernetes.io/name: grafana
