grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/component: observability
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: parca
spec:
  rules:
    - host: demo.parca.dev
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /grafana
            pathType: Prefix
  tls:
    - hosts:
        - demo.parca.dev
      secretName: demo-parca-dev-tls
