parca-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/component: observability
    app.kubernetes.io/instance: parca
    app.kubernetes.io/name: parca
  name: parca
  namespace: parca
spec:
  rules:
  - host: demo.parca.dev
    http:
      paths:
      - backend:
          service:
            name: parca
            port:
              number: 7070
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - demo.parca.dev
    secretName: demo-parca-dev-tls
